Fix Redis crash loop - use file-based drivers as safe defaults
ROOT CAUSE: .env.example had CACHE_DRIVER=redis, SESSION_DRIVER=redis, REDIS_CLIENT=phpredis
- When copied to .env during deployment, app tried to connect to Redis
- Redis connector failed with 'Call to a member function connect() on null'
- Application crashed in infinite loop

SOLUTION:
- Changed CACHE_DRIVER from redis → file
- Changed SESSION_DRIVER from redis → file
- Changed QUEUE_CONNECTION from redis → sync
- Changed BROADCAST_DRIVER from pusher → log
- Changed REDIS_CLIENT from phpredis → predis
- Changed FILESYSTEM_DISK from s3 → public

Railway environment variables can still override these defaults for production Redis usage

--- a/backend/install/.env.example
+++ b/backend/install/.env.example
@@ -22,11 +22,11 @@ DB_USERNAME=qutekart
 DB_PASSWORD=secret
 
 # === Drivers ===
-BROADCAST_DRIVER=pusher
-CACHE_DRIVER=redis
-FILESYSTEM_DISK=s3
-QUEUE_CONNECTION=redis
-SESSION_DRIVER=redis
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DISK=public
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
 SESSION_LIFETIME=7200
 
 # === Cache ===
@@ -36,7 +36,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 
 # === Mail ===
 MAIL_MAILER=smtp
