--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,11 +7,7 @@ cmds = [
 ]
 
 [phases.build]
-cmds = [
-    "cd backend/install && php artisan config:cache",
-    "cd backend/install && php artisan route:cache",
-    "cd backend/install && php artisan view:cache"
-]
+cmds = []
 
 [start]
 cmd = "cd backend/install && php artisan serve --host=0.0.0.0 --port=$PORT"
