Fix: Use Railway environment variables directly instead of .env file

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ["php83", "php83Packages.composer", "postgresql", "nodejs"]
 cmds = ["echo 'Install phase - nixpacks will copy files here'"]
 
 [start]
-cmd = "cd backend/install && composer install --optimize-autoloader --no-dev --no-interaction && cp .env.example .env && php artisan key:generate --force && php artisan config:clear && php artisan route:clear && php artisan cache:clear && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "cd backend/install && composer install --optimize-autoloader --no-dev --no-interaction && php artisan config:clear && php artisan route:clear && php artisan cache:clear && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
